apps/media/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-ca
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-com
  hostnames:
    - sonarr.travisprosser.ca
    - sonarr.travisprosser.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 9091
