apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.home-server-k3s.lan
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarr
                port:
                  name: web-ui
